@@ -8,15 +8,17 @@ dnl appropriate preprocessor and linker flags.
 AC_DEFUN([WEBAUTH_LIB_CURL],
 [AC_REQUIRE([AC_CANONICAL_HOST])
 AC_ARG_WITH([curl],
-             AC_HELP_STRING([--with-curl=PATH], [Path to cURL install]),
-             [if test x"$withval" != xno && test x"$withval" != xyes ; then
-                 CURL_LDFLAGS=-L$withval/lib
-                 CURL_CPPFLAGS=-I$withval/include
-              fi])
+    AC_HELP_STRING([--with-curl=PATH], [Path to cURL install]),
+    [if test x"$withval" != xno && test x"$withval" != xyes ; then
+        CURL_LDFLAGS=-L$withval/lib
+        CURL_CPPFLAGS=-I$withval/include
+     fi])
 WEBAUTH_LDFLAGS_save=$LDFLAGS
 LDFLAGS="$LDFLAGS $CURL_LDFLAGS"
 CURL_LIBS=
-AC_CHECK_LIB([z], [inflate], [CURL_LIBS=-lz])
+if test x"$reduced_depends" != xtrue ; then
+    AC_CHECK_LIB([z], [inflate], [CURL_LIBS=-lz])
+fi
 AC_CHECK_LIB([curl], [curl_easy_init], [CURL_LIBS=-lcurl], ,
     [$CURL_LIBS $SSL_LIBS])
 LDFLAGS=$WEBAUTH_LDFLAGS_save
